--- a/index.qmd
+++ b/index.qmd
@@ -6,29 +6,67 @@ toc-location: right
 
 # Overview
 
-Data Analysis in R helps you analyse data but also to understand the literature, design experiments and report the results.
-
+Data Analysis in R helps you analyse data but also to understand and
+critically evaluate scientific literature, design your own experiments
+and report your results.
 
 ## Learning Data Analysis is important...
 
-Reproducible data management, handling, wrangling, modelling and visualisation underpin both the scientific process and many of the most in-demand hard skills. 
+Reproducible data management, handling, wrangling, modelling and
+visualisation underpin the scientific process. But they are also amongst
+the most in-demand hard skills.
 
 ## ... and takes time ...
 
-Part of the reason that these skills are in-demand is that they take time and practice in the same way that playing an instrument, speaking another language or playing a sport do. They are skills you develop rather than facts you memorise. You will make a lot of mistakes.
+Part of the reason that these skills are in-demand is that they take
+time –practice – to learn in the same way that playing an instrument,
+speaking another language or playing a sport take time and practice.
+They are skills you develop more than facts you memorise. You will make
+a lot of mistakes.
 
 ## ... but can be great fun ...
 
-There is a lot of problem solving which is enaging work because there's always something to 'chase'. You may be able to concentrate on coding for much longer than on writing or reading because it is such an active learning process. You'll create impressive looking figures, which you can reproduce on a different dataset in moments, exciting biological insights revealed in a test and whole world of 'techy' tricks you had no idea you'd be able to do!
+There is a lot of problem solving which is engaging work because there's
+always something to 'chase'. You may be able to concentrate on coding
+for much longer than on writing or reading because it is such an active
+learning process. You'll create impressive looking figures, which you
+can reproduce on a different dataset in moments, reveal exciting
+biological insights through data visualisation and analysis and learn
+whole world of 'techy' tricks you had no idea you'd be able to do!
 
-The time and effort you put in to learning "Data Analysis in R" WILL reward you no matter how you evaluate yourself relative to others. You will be able to:
+The time and effort you put in to learning "Data Analysis in R" **will**
+reward you no matter how you evaluate yourself. You will be able to:
 
--    better and/or more quickly design and analyse scientific investigations for modules and projects in which in turn will allow you to perform better in assessments.
+-   better and/or more quickly design and analyse scientific
+    investigations for modules and projects in which in turn will allow
+    you to perform better in assessments.
 
 -   evaluate and interpret the data analysis in papers
 
 -   access a wide range of careers
 
+## ... and there's help!
+
+There is a book to support the Data Analysis in R content in your degree:
+[Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/)
+
 ## What is this site for?
 
-All the Data Analysis in R teaching is on the VLE so why is this site useful? Well, perhaps more than any other material, you will want to refer back when applying your skills throughout your degree and this site collects everything together in a searchable way. The search icon is on the top right.
+All the Data Analysis in R teaching is on the VLE so why is this site
+useful? Well, perhaps more than any other material, you will want to
+refer back when applying your skills throughout your degree. This site
+collects everything together and is searchable. The search icon is on
+the top right.
+
+## Make a suggestion
+
+Those with
+[GitHub](https://docs.github.com/en/get-started/start-your-journey/about-github-and-git#where-do-i-start)
+accounts can make a suggestion dorrectly from a site webpage. When you
+find errors – from simple typos to more troublesome issues – or want to
+make a suggestion, please use the "Make a suggestion" link on the right.
+This will open an "issue" on github (where the site is hosted) where you
+can let me know about the error or suggestion.
+
+**There is absolutely no requirement to use Git or GitHub in the BABS
+modules**.
