--- a/r4babs1/week-6/workshop.qmd
+++ b/r4babs1/week-6/workshop.qmd
@@ -5,47 +5,50 @@ toc: true
 toc-location: right
 ---
 
-There is no formal workshop this week but I recommend setting yourself up to
-work from home
+There is no formal workshop this week but I recommend setting yourself
+up to work from home
 
-1.  💻 Set up the Virtual Desktop. I recommend working on 
-    the University computers for this work. Installing R and RStudio 
-    is almost always straightforward but many people are still developing
-    their computing skills. If you sometimes have difficulty updating 
-    and or installing software on your own machine, wouldn't know what 
-    what versions of R and RStudio you are using or don't realise there 
-    is a difference between R and RStudio you will likely avoid trouble
-    by using the university machines. The uni machines always have 
-    up-to-date R and R packages and all the packages that appear in 
-    teaching materials. You can still work from home by using the
-    [Virtual Desktop Service](https://www.york.ac.uk/it-services/tools/vds/). 
-    The VDS allows you to log on to a university computer from your 
-    own computer. It means you can access all software and filestores. 
-    When using the VDS for R and RStudio, it usually makes sense to use 
-    other software - such as a browser or file explorer - also through the VDS.
-    Go to the [Virtual Desktop Service](https://www.york.ac.uk/it-services/tools/vds/)
-    for set up instructions.
-    
-    However, If you are confident in your ability to set up your own machine, you 
-    need:
-    
-    -   to know there is a 
-        [difference between R and RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#what-are-r-and-rstudio)
-    -   [Install R and Rstudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#installing-r-and-rstudio)
-    -   to us R 4.4 and RStudio 2024.09.0 Build 375 ("Cranberry Hibiscus")
-    -   to be certain you are actually using R 4.4 - it is written in the top edge
-        of the console window. By default RStudio uses the latest version on 
-        R on your machine. 
+1.  💻 Set up the Virtual Desktop. I recommend working on the University
+    computers for this work. Installing R and RStudio is almost always
+    straightforward but many people are still developing their computing
+    skills. If you sometimes have difficulty updating and or installing
+    software on your own machine, wouldn't know what what versions of R
+    and RStudio you are using or don't realise there is a difference
+    between R and RStudio you will likely avoid trouble by using the
+    university machines. The uni machines always have up-to-date R and R
+    packages and all the packages that appear in teaching materials. You
+    can still work from home by using the [Virtual Desktop
+    Service](https://www.york.ac.uk/it-services/tools/vds/). The VDS
+    allows you to log on to a university computer from your own
+    computer. It means you can access all software and filestores. When
+    using the VDS for R and RStudio, it usually makes sense to use other
+    software - such as a browser or file explorer - also through the
+    VDS. Go to the [Virtual Desktop
+    Service](https://www.york.ac.uk/it-services/tools/vds/) for set up
+    instructions.
 
-    It is possible to access all your files on your university account without 
-    using the VDS. For example, if you want to work on uni machines at uni 
-    and your machine at home. You can best do this by 
-    [mapping a drive](https://support.york.ac.uk/s/topic/0TO4K000000lA5ZWAU/filestores).
-    If you store everything on google drive you can also read/write to that 
-    like any other drive using google drive app.
+    However, If you are confident in your ability to set up your own
+    machine, you need:
 
+    -   to know there is a [difference between R and
+        RStudio](https://3mmarand.github.io/comp4biosci/about-R-and-RStudio.html)
+    -   [Install R and
+        Rstudio](https://3mmarand.github.io/comp4biosci/about-R-and-RStudio.html#installing-r-and-rstudio)
+    -   to us R 4.5 and RStudio RStudio 2025.05.0+496 "Mariposa Orchid"
+        Release
+    -   to be certain you are actually using R 4.5 - it is written in
+        the top edge of the console window. By default RStudio uses the
+        *latest* version on R on your machine.
 
-Even if you plan to use your own machine I really recommend you take 
-the time to set the VDS up now while you're not time pressured so you 
-always have that option ready.
+    It is possible to access all your files on your university account
+    without using the VDS. For example, if you want to work on uni
+    machines at uni and your machine at home. You can best do this by
+    [mapping a
+    drive](https://support.york.ac.uk/s/topic/0TO4K000000lA5ZWAU/filestores).
+    If you store everything on google drive you can also read/write to
+    that like any other drive using google drive app.
 
+Set up the [Virtual Desktop
+Service](https://www.york.ac.uk/it-services/tools/vds/) NOW even if you
+plan to use your own machine. This means you will always have that
+option if your own set causes a problem.
