--- a/pgt52m/week-1/study_before_workshop.qmd
+++ b/pgt52m/week-1/study_before_workshop.qmd
@@ -5,9 +5,13 @@ toc: true
 toc-location: right
 ---
 
-1.  Watch an Introduction to Data Analysis in R for BABS 1 - 4
+1.  📖 If you have not done so already, read  
+    and [An overview of 52M Data Analysis in R](../pgt52m.qmd). Also 
+    linked on the VLE.
 
-2.  Read [What they forgot to teach you about computers](https://3mmarand.github.io/comp4biosci/what_they_forgot.html) in [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/)
+2.  📖 Read [What they forgot to teach you about computers](https://3mmarand.github.io/comp4biosci/what-they-forgot.html) in [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/)
 
-3.  Read [What are R and Rstudio?](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#what-are-r-and-rstudio). You only need to read *this* section, you do not need to the read the rest of the chapter (yet!)
+3.  📖 Read [What are R and Rstudio?](https://3mmarand.github.io/comp4biosci/about-R-and-RStudio.html). 
+    You only need to read *this* section, you do not need to the read the
+    rest of the chapter (yet!)
 
