--- a/pgt52m/week-2/workshop.qmd
+++ b/pgt52m/week-2/workshop.qmd
@@ -569,7 +569,8 @@ of the page.
 Coding and thinking answers are marked with `#---CODING ANSWER---` and
 `#---THINKING ANSWER---`
 
-Pages made with R [@R-core], Quarto [@allaire2022], `knitr` [@knitr],
+Pages made with R [@R-core], Quarto [@allaire2022], `knitr` 
+[@knitr1; @knitr2; @knitr3],
 `kableExtra` [@kableExtra]
 
 # References
