--- a/pgt52m/week-3/study_after_workshop.qmd
+++ b/pgt52m/week-3/study_after_workshop.qmd
@@ -11,7 +11,8 @@ format:
 
 # Set up
 
-If you have just opened RStudio you will want to load the packages and import the data.
+If you have just opened RStudio you will want to load the packages and
+import the data.
 
 ```{r}
 #| code-fold: false
@@ -27,7 +28,9 @@ cats <- read_csv("data-raw/cat-coats.csv")
 
 # Exercises
 
-1.  💻 Summarise the `fly_bristles_means` dataframe by calculating the mean, median, sample size, standard deviation and standard error of the `mean_count` variable.
+1.  💻 Summarise the `fly_bristles_means` dataframe by calculating the
+    mean, median, sample size, standard deviation and standard error of
+    the `mean_count` variable.
 
 ```{r}
 #| output: false
@@ -39,7 +42,8 @@ fly_bristles_means_summary <- fly_bristles_means |>
             standard_error = standard_dev / sqrt(n))
 ```
 
-2.  💻 Create an appropriate plot to show the distribution of `mean_count` in `fly_bristles_means`
+2.  💻 Create an appropriate plot to show the distribution of
+    `mean_count` in `fly_bristles_means`
 
 ```{r}
 #| output: false
@@ -48,8 +52,10 @@ ggplot(fly_bristles_means, aes(x = mean_count)) +
   geom_histogram(bins = 10)
 ```
 
-3.  💻 Can you format the plot 2. by removing the grey background, giving the bars a black outline and the fill colour of your choice and improving the axis format and labelling? You may want to refer to [last week's workshop](../week-7/workshop.html).
-
+3.  💻 Can you format the plot 2. by removing the grey background,
+    giving the bars a black outline and the fill colour of your choice
+    and improving the axis format and labelling? You may want to refer
+    to [last week's workshop](../week-2/workshop.html).
 
 ```{r}
 #| output: false
@@ -66,7 +72,11 @@ ggplot(fly_bristles_means, aes(x = mean_count)) +
   theme_classic()
 ```
 
-4.  💻 Amend this code to change the order of the bars by the average mass of each coat colour? [Changing the order of bars](../week-7/workshop.html#changing-the-order-of-bars) was covered last week. You may also want to practice formatting the graph nicely.
+4.  💻 Amend this code to change the order of the bars by the average
+    mass of each coat colour? [Changing the order of
+    bars](../week-2/workshop.html#changing-the-order-of-bars) was
+    covered last week. You may also want to practice formatting the
+    graph nicely.
 
 ```{r}
 #| code-fold: false
@@ -87,4 +97,5 @@ ggplot(cats,
   theme_classic()
 ```
 
-5.  📖 Read [Understanding the pipe `|>`](https://3mmarand.github.io/comp4biosci/workflow_rstudio.html)
+5.  📖 Read [Understanding the pipe
+    `|>`](https://3mmarand.github.io/comp4biosci/workflow-rstudio.html#understanding-the-pipe)
